--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "Vanya Sofroni",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
     "autoprefixer": "^7.1.5",
     "browser-sync": "^2.18.8",
     "css-mqpacker": "^6.0.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^8.0.0",
     "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
@@ -27,7 +30,6 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tinypng-nokey": "^1.1.0",
     "gulp-uglifyjs": "^0.6.2",
-    "imagemin-pngquant": "^5.0.1",
     "run-sequence": "^2.2.0"
   }
 }
